# nCine-libraries

./: CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
.github/workflows/: emscripten.yml  linux.yml  macos.yml  mingw.yml  windows.yml
cmake/: box2d.cmake  curl.cmake  glew.cmake  glfw.cmake  glfw_static.cmake  jpeg-turbo.cmake  lua.cmake  ogg.cmake  openal-soft.cmake  png.cmake  rgfw.cmake  sdl.cmake  sdl2.cmake  sdl_image.cmake  tiff.cmake  vorbis.cmake  webp.cmake  webp_static.cmake  zlib.cmake
patches/: CMakeLists_lua.txt  CMakeLists_rgfw.txt  box2d-emscripten.patch  box2d-linux.patch  box2d_242.cmake  glew_vs2019.cmake  glfw-virtualized_osx.patch  ogg_mingw.patch  openal-soft_mingw.patch  sdl2_mingw.patch  sdl2_vs2019.cmake  vorbis_mingw.patch  webp-emscripten.patch
